--- a/public/locales/lv.json
+++ b/public/locales/lv.json
@@ -19,21 +19,43 @@
     "Failed": "Neizdevās",
     "Refunded": "Atmaksāts",
     "Search order": "Meklēšanas secība",
+    "QR number": "QR numurs",
     "From": "No",
     "Status": "Statuss",
-    "Total": "Kopā",
+    "Subtotal": "Starpsumma",
     "Time": "Laiks",
+    "Sketch": "Skice",
+    "Drawing": "Zīmējums",
+    "Preview": "Priekšskatījums",
+    "Editing": "Rediģēšana",
+    "Input fields": "Ievades lauki",
+    "Calculate price": "Aprēķināt cenu",
+    "Flat price": "Vienota cena",
+    "By sketch": "Pēc skices",
+    "By formula": "Pēc formulas",
+    "Formula": "Formula",
+    "(A + B) * L": "(A +B) * L",
+    "Test field": "Pārbaudes lauks",
+    "Test field..": "Pārbaudes lauks..",
     "Description": "Apraksts",
     "Title": "Nosaukums",
     "Sushi set..": "Suši komplekts..",
     "Short Description": "Īss apraksts",
     "Images": "Attēli",
     "Price": "Cena",
-    "Price normal": "Parasta cena",
+    "Default": "Noklusējums",
+    "discount": "atlaide",
     "Discounted": "Atlaide",
+    "Discount list": "Atlaižu saraksts",
     "+ add variation": "+ pievienot variāciju",
     "Inventory": "Inventārs",
-    "Product stock unit identification number": "Produkta krājuma vienības identifikācijas numurs",
+    "Product stock unit identification number or SKU.": "Produkta krājuma vienības identifikācijas numurs vai SKU.",
+    "Stock management": "Krājumu vadība",
+    "Enable stock management.": "Iespējot krājumu pārvaldību.",
+    "Stock quantity": "Krājumu daudzums",
+    "Total number of products left.": "Kopējais atlikušo produktu skaits.",
+    "Low stock": "Zems krājums",
+    "Low stock threshold.": "Zems krājumu slieksnis.",
     "General": "Ģenerālis",
     "Published": "Publicēts",
     "Draft": "Melnraksts",
@@ -45,37 +67,95 @@
     "Payout": "Izmaksa",
     "Legal": "Juridisks",
     "Order ID": "Pasūtījuma ID",
-    "Define new order ID number.": "Norādiet jauno pasūtījuma ID numuru.",
-    "Notifications": "Paziņojumi",
+    "Define next new order ID number.": "Definējiet nākamā jaunā pasūtījuma ID numuru.",
+    "Auto complete": "Automātiski pabeigta",
     "None": "Nav",
+    "1 minute": "1 minūte",
+    "5 minutes": "5 minūtes",
+    "20 minutes": "20 minūtes",
+    "1 hour": "1 stunda",
+    "12 hours": "12 stundas",
+    "24 hours": "24 stundas",
+    "Auto complete orders after certain amount of time.": "Automātiski pabeigt pasūtījumus pēc noteikta laika.",
+    "Tables": "Tabulas",
+    "Table mode": "Tabulas režīms",
+    "Enable table mode in orders dashboard.": "Pasūtījumu informācijas panelī iespējot tabulas režīmu.",
+    "List of tables": "Tabulu saraksts",
+    "Provide one table per line. Example: 5.": "Katrā rindā sniedziet vienu tabulu. Piemērs: 5.",
+    "Notifications": "Paziņojumi",
     "Client": "Klients",
     "Administrator": "Administrators",
     "Client and administrator": "Klients un administrators",
-    "Admin emails": "Administratora e-pasta ziņojumi",
+    "Emails": "E-pasti",
     "Cancelled order": "Atcelts pasūtījums",
     "Processing order": "Pasūtījuma apstrāde",
     "Refunded order": "Atmaksāts pasūtījums",
-    "Currency settings": "Valūtas iestatījumi",
+    "Completed order": "Pabeigts pasūtījums",
+    "Choose how to trigger notifications.": "Izvēlieties, kā aktivizēt paziņojumus.",
+    "Example: alex@kenzap.com, orders@kenzap.com": "Piemērs: alex@kenzap.com, orders@kenzap.com",
+    "Via dashboard": "Izmantojot informācijas paneli",
+    "Via email": "Pa e-pastu",
+    "Via dashboard and email": "Izmantojot informācijas paneli un e-pastu",
+    "Product low stock notification settings.": "Paziņojuma iestatījumi par produktu par mazu krājumu.",
     "Currency": "Valūta",
     "Currency symbol": "Valūtas simbols",
-    "Currency position": "Valūtas pozīcija",
+    "Position": "Pozīcija",
     "Left": "Pa kreisi",
     "Right": "Pa labi",
     "Left with space": "Atlicis ar vietu",
     "Right with space": "Tieši ar telpu",
+    "Currency position symbol.": "Valūtas pozīcijas simbols.",
     "Tax": "Nodoklis",
     "Calculate": "Aprēķināt",
     "Enable tax calculations when processing orders.": "Pasūtījumu apstrādes laikā iespējot nodokļu aprēķinus.",
     "Geolocation": "Ģeolokācija",
     "Auto tax rate": "Auto nodokļa likme",
     "Automatically detect tax rate whenever applicable.": "Automātiski noteikt nodokļu likmi, kad vien piemērojams.",
-    "Rate": "Likme",
+    "Percent": "Procenti",
     "Default tax rate. Example, 9 or 21. Use numeric value.": "Noklusējuma nodokļa likme. Piemērs, 9 vai 21. Izmantojiet skaitlisko vērtību.",
     "Display": "Displejs",
     "Tax title. Example, VAT or GST.": "Nodokļa nosaukums. Piemēram, PVN vai GST.",
-    "Invoice and receipts": "Rēķins un kvītis",
+    "Fees": "Maksas",
+    "Service": "apkalpošana",
+    "Calculate service fee when processing orders.": "Aprēķiniet pakalpojuma maksu, apstrādājot pasūtījumus.",
+    "Default fee rate. Example, 5 or 7. Use numeric value.": "Noklusējuma maksas likme. Piemērs, 5 vai 7. Izmantojiet skaitlisko vērtību.",
+    "Fee title. Example, Service fee.": "Maksas nosaukums. Piemēram, pakalpojuma maksa.",
+    "Payment": "Maksājums",
+    "Methods": "Metodes",
+    "Custom methods": "Pielāgotas metodes",
+    "Allow changing of payment method in the dashboard.": "Atļaut informācijas panelī mainīt maksājuma veidu.",
+    "List of Methods": "Metožu saraksts",
+    "Provide list of available payment methods. Example: PayPal, PayNow.": "Sniedziet pieejamo maksājuma veidu sarakstu. Piemērs: PayPal, PayNow.",
+    "Discounts": "Atlaides",
+    "Coupons": "Kuponi",
+    "Enable coupons": "Iespējot kuponus",
+    "Allow use of coupons upon checkout.": "Atļaut izmantot kuponus izrakstīšanās laikā.",
+    "List of coupons": "Kuponu saraksts",
+    "Provide one coupon and its discount rate per line. Example: BESTDEALS 15.": "Katrā rindā norādiet vienu kuponu un tā diskonta likmi. Piemērs: BESTDEALS 15.",
+    "Products": "Produkti",
+    "Product discounts": "Preču atlaides",
+    "Enable or disable all discounts defined under individual products page.": "Iespējot vai atspējot visas atlaides, kas norādītas atsevišķu produktu lapā.",
+    "List of hours": "Stundu saraksts",
+    "Provide one happy hour, its discount per line. Example: Monday 15:00-17:30 10.": "Nodrošiniet vienu laimīgo stundu ar atlaidi katrai rindai. Piemērs: pirmdiena 15:00-17:30 10.",
+    "Printing": "Drukāšana",
+    "Action": "Darbība",
+    "Default printing dialogue": "Noklusējuma drukāšanas dialogs",
+    "Kenzap print app": "Kenzap drukas lietotne",
+    "Choose action when printing icon is clicked.": "Izvēlieties darbību, kad tiek noklikšķināts uz drukāšanas ikonas.",
+    "Print": "Drukāt",
+    "Invoice": "Rēķins",
+    "Receipt": "Kvīts",
+    "Default printing media.": "Noklusējuma drukas materiāls.",
     "Receipts": "Kvītis",
-    "Invoice receipt design for printers.": "Rēķinu čeku dizains printeriem.",
+    "Default receipt template for printers.": "Noklusējuma kvīšu veidne printeriem.",
+    "Auto mode": "automašīnas režīms",
+    "Auto print": "Automātiskā drukāšana",
+    "Auto print new orders from this device. Other devices will not be affected.": "Automātiski drukāt jaunus pasūtījumus no šīs ierīces. Citas ierīces netiks ietekmētas.",
+    "QR code": "QR kods",
+    "QR code printing": "QR koda drukāšana",
+    "Allow \"Scan me to order\" QR-code printing from orders dashboard.": "Atļaut “Skenēt mani, lai pasūtītu” QR koda drukāšanu no pasūtījumu informācijas paneļa.",
+    "QR printing": "QR drukāšana",
+    "Default \"Scan me to order\" template for printers.": "Noklusējuma veidne “Skenēt, lai pasūtītu” printeriem.",
     "Your tax information": "Jūsu nodokļu informācija",
     "Invoice info (this information will be not revealed public)": "Informācija par rēķinu (šī informācija netiks atklāta)",
     "Tax ID": "Nodokļu ID",
@@ -115,8 +195,8 @@
     "Nov": "Nov",
     "Dec": "Dec",
     "moments ago": "pirms mirkļiem",
-    " minutes ago": " pirms minūtēm",
-    " hours ago": " pirms vairākām stundām",
+    "minutes ago": "pirms minūtēm",
+    "hours ago": "pirms vairākām stundām",
     "required": "nepieciešams",
     "Showing %1$ to %2$ of %3$ entries": "Tiek rādīts %1$ līdz %2$ no %3$ ierakstiem",
     "Create": "Izveidot",
@@ -124,14 +204,19 @@
     "Close": "Aizvērt",
     "Product": "Produkts",
     "Qty": "Daudzums",
+    "Total": "Kopā",
     "Search..": "Meklēt..",
     "Add note": "Pievienot piezīmi",
     "Add variation": "Pievienojiet variāciju",
     "Adjust price": "Pielāgojiet cenu",
     "Remove": "Noņemt",
     "Note": "Piezīme",
+    "Discount by value": "Atlaide pēc vērtības",
+    "Discount by %": "Atlaide par %",
+    "Grand Total": "Kopsumma",
     "Incorrect product data": "Nepareizi produkta dati",
     "ID": "ID",
+    "Table": "Tabula",
     "Name": "Vārds",
     "Surname": "Uzvārds",
     "Bios": "Bios",
@@ -147,11 +232,11 @@
     "Bank": "Banka",
     "Bank city": "Bankas pilsēta",
     "Bank country": "Bankas valsts",
-    "Amount Payable": "Maksājamā summa",
     "Link 3": "3. saite",
     "Grade": "Novērtējums",
     "Kenzap IDA": "Kenzaps IDA",
-    "Printing j": "Drukāšana j",
+    "Table %1$": "Tabula %1$",
+    "Discount": "Atlaide",
     "new category": "jauna kategorija",
     "Dashboard": "Dashboards",
     "E-commerce": "Ē-komercija",
@@ -159,7 +244,6 @@
     "day": "diena",
     "days": "dienas",
     "Total tax": "Kopējais nodoklis",
-    "Total with tax": "Kopā ar nodokli",
     "No data to display": "Nav datu, ko parādīt",
     "Totals": "Kopsummas",
     "Created by %1$Kenzap%2$. ❤️ Licensed %3$GPL3%4$.": "Izveidoja %1$Kenzap%2$. ❤️ Licencēts %3$GPL3%4$.",
@@ -190,10 +274,37 @@
     "Add Variation": "Pievienot variāciju",
     "Brown rice": "Brūnie rīsi",
     "You can change default currency under Dashboard &gt; Settings.": "Varat mainīt noklusējuma valūtu sadaļā Informācijas panelis &gt; Iestatījumi.",
+    "Add discount": "Pievienot atlaidi",
+    "By percent": "Pēc procentiem",
+    "By value": "Pēc vērtības",
+    "Percent %": "procenti %",
+    "Value": "Vērtība",
+    "12.00": "12.00",
+    "Define how big is the discount (numeric value only).": "Definējiet, cik liela ir atlaide (tikai skaitliskā vērtība).",
+    "Availability": "Pieejamība",
+    "Always": "Vienmēr",
+    "Hourly": "Stundu",
+    "Weekly": "Iknedēļas",
+    "Monthly": "Ikmēneša",
+    "Restrict discount availability.": "Ierobežot atlaižu pieejamību.",
+    "Days of week": "Nedēļas dienas",
+    "Monday": "pirmdiena",
+    "Tuesday": "otrdiena",
+    "Wednesday": "trešdiena",
+    "Thursday": "ceturtdiena",
+    "Friday": "piektdiena",
+    "Saturday": "sestdiena",
+    "Sunday": "svētdiena",
+    "Days of the week when discount is available.": "Nedēļas dienas, kad ir pieejama atlaide.",
+    "12:00": "12:00",
+    "To": "Uz",
+    "17:00": "17:00",
+    "Time range when discount is available.": "Laika diapazons, kad ir pieejama atlaide.",
+    "Example: •happy hour promo.": "Piemērs: •laimīgās stundas akcija.",
+    "+ add option": "+ pievienošanas opcija",
+    "to differentiate price offering.": "lai diferencētu cenu piedāvājumu.",
     "Please provide image in JPEG format": "Lūdzu, norādiet attēlu JPEG formātā",
     "Please provide image less than 5 MB in size!": "Lūdzu, norādiet attēlu, kura izmērs ir mazāks par 5 MB!",
-    "+ add option": "+ pievienošanas opcija",
-    ", differentiate price and product options.": ", diferencēt cenas un preču iespējas.",
     "Product updated": "Produkts atjaunināts",
     "Search products": "Meklēt produktus",
     "Completely remove this product?": "Vai pilnībā noņemt šo produktu?",
@@ -202,6 +313,21 @@
     "Last change": "Pēdējā maiņa",
     "No products to display.": "Nav produktu, ko parādīt.",
     "Remove this product": "Noņemiet šo produktu",
-    "Choose currency": "Izvēlieties valūtu"
+    "Choose currency": "Izvēlieties valūtu",
+    "Price normal": "Parasta cena",
+    "Product stock unit identification number": "Produkta krājuma vienības identifikācijas numurs",
+    "Define new order ID number.": "Norādiet jauno pasūtījuma ID numuru.",
+    "Admin emails": "Administratora e-pasta ziņojumi",
+    "Currency settings": "Valūtas iestatījumi",
+    "Currency position": "Valūtas pozīcija",
+    "Rate": "Likme",
+    "Invoice and receipts": "Rēķins un kvītis",
+    "Invoice receipt design for printers.": "Rēķinu čeku dizains printeriem.",
+    " minutes ago": " pirms minūtēm",
+    " hours ago": " pirms vairākām stundām",
+    "Amount Payable": "Maksājamā summa",
+    "Printing j": "Drukāšana j",
+    "Total with tax": "Kopā ar nodokli",
+    ", differentiate price and product options.": ", diferencēt cenas un preču iespējas."
   }
 }
