--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -19,21 +19,43 @@
     "Failed": "Ha fallado",
     "Refunded": "Reintegrado",
     "Search order": "Orden de búsqueda",
+    "QR number": "Número QR",
     "From": "Desde",
     "Status": "Estado",
-    "Total": "Total",
+    "Subtotal": "Total parcial",
     "Time": "Tiempo",
+    "Sketch": "Bosquejo",
+    "Drawing": "Dibujo",
+    "Preview": "Avance",
+    "Editing": "Edición",
+    "Input fields": "Campos de entrada",
+    "Calculate price": "Calcular precio",
+    "Flat price": "Precio fijo",
+    "By sketch": "por boceto",
+    "By formula": "por fórmula",
+    "Formula": "Fórmula",
+    "(A + B) * L": "(A + B) * L",
+    "Test field": "campo de prueba",
+    "Test field..": "campo de prueba..",
     "Description": "Descripción",
     "Title": "Título",
     "Sushi set..": "juego de sushi..",
     "Short Description": "Breve descripción",
     "Images": "Imágenes",
     "Price": "Precio",
-    "Price normal": "precio normal",
+    "Default": "Defecto",
+    "discount": "descuento",
     "Discounted": "Con descuento",
+    "Discount list": "lista de descuento",
     "+ add variation": "+ añadir variación",
     "Inventory": "Inventario",
-    "Product stock unit identification number": "Número de identificación de la unidad de stock del producto",
+    "Product stock unit identification number or SKU.": "Número de identificación de la unidad de stock del producto o SKU.",
+    "Stock management": "Gestion de Stocks",
+    "Enable stock management.": "Habilitar la gestión de existencias.",
+    "Stock quantity": "Cantidad de stock",
+    "Total number of products left.": "Número total de productos restantes.",
+    "Low stock": "Pocas existencias",
+    "Low stock threshold.": "Bajo umbral de existencias.",
     "General": "General",
     "Published": "Publicado",
     "Draft": "Sequía",
@@ -45,37 +67,95 @@
     "Payout": "Pagar",
     "Legal": "Legal",
     "Order ID": "Solicitar ID",
-    "Define new order ID number.": "Defina el nuevo número de identificación del pedido.",
-    "Notifications": "Notificaciones",
+    "Define next new order ID number.": "Defina el siguiente número de ID de pedido nuevo.",
+    "Auto complete": "Autocompletar",
     "None": "Ninguna",
+    "1 minute": "1 minuto",
+    "5 minutes": "5 minutos",
+    "20 minutes": "20 minutos",
+    "1 hour": "1 hora",
+    "12 hours": "12 horas",
+    "24 hours": "24 horas",
+    "Auto complete orders after certain amount of time.": "Auto completar pedidos después de cierta cantidad de tiempo.",
+    "Tables": "Mesas",
+    "Table mode": "Modo de mesa",
+    "Enable table mode in orders dashboard.": "Habilite el modo de mesa en el panel de pedidos.",
+    "List of tables": "Lista de tablas",
+    "Provide one table per line. Example: 5.": "Proporcione una tabla por línea. Ejemplo: 5.",
+    "Notifications": "Notificaciones",
     "Client": "Cliente",
     "Administrator": "Administrador",
     "Client and administrator": "cliente y administrador",
-    "Admin emails": "Correos electrónicos de administración",
+    "Emails": "Correos electrónicos",
     "Cancelled order": "Orden cancelada",
     "Processing order": "Orden de procesamiento",
     "Refunded order": "pedido reembolsado",
-    "Currency settings": "Configuración de moneda",
+    "Completed order": "Orden completada",
+    "Choose how to trigger notifications.": "Elija cómo activar las notificaciones.",
+    "Example: alex@kenzap.com, orders@kenzap.com": "Ejemplo: alex@kenzap.com, orders@kenzap.com",
+    "Via dashboard": "A través del tablero",
+    "Via email": "Vía correo electrónico",
+    "Via dashboard and email": "A través del tablero y el correo electrónico",
+    "Product low stock notification settings.": "Ajustes de notificación de stock bajo de producto.",
     "Currency": "Divisa",
     "Currency symbol": "Símbolo de moneda",
-    "Currency position": "Posición de moneda",
+    "Position": "Posición",
     "Left": "Izquierda",
     "Right": "Derecha",
     "Left with space": "Dejado con espacio",
     "Right with space": "Justo con el espacio",
+    "Currency position symbol.": "Símbolo de posición de moneda.",
     "Tax": "Impuesto",
     "Calculate": "Calcular",
     "Enable tax calculations when processing orders.": "Habilite los cálculos de impuestos al procesar pedidos.",
     "Geolocation": "Geolocalización",
     "Auto tax rate": "Tasa de impuesto automático",
     "Automatically detect tax rate whenever applicable.": "Detecta automáticamente la tasa de impuestos cuando corresponda.",
-    "Rate": "Velocidad",
+    "Percent": "Por ciento",
     "Default tax rate. Example, 9 or 21. Use numeric value.": "Tasa impositiva predeterminada. Ejemplo, 9 o 21. Utilice un valor numérico.",
     "Display": "Mostrar",
     "Tax title. Example, VAT or GST.": "Título fiscal. Ejemplo, IVA o GST.",
-    "Invoice and receipts": "Factura y recibos",
+    "Fees": "Tarifa",
+    "Service": "Servicio",
+    "Calculate service fee when processing orders.": "Calcule la tarifa de servicio al procesar pedidos.",
+    "Default fee rate. Example, 5 or 7. Use numeric value.": "Tasa de tarifa predeterminada. Ejemplo, 5 o 7. Utilice un valor numérico.",
+    "Fee title. Example, Service fee.": "Título de la tarifa. Ejemplo, Tarifa de servicio.",
+    "Payment": "Pago",
+    "Methods": "Métodos",
+    "Custom methods": "Métodos personalizados",
+    "Allow changing of payment method in the dashboard.": "Permitir el cambio de método de pago en el tablero.",
+    "List of Methods": "Lista de métodos",
+    "Provide list of available payment methods. Example: PayPal, PayNow.": "Proporcionar una lista de los métodos de pago disponibles. Ejemplo: PayPal, Pagar Ahora.",
+    "Discounts": "Descuentos",
+    "Coupons": "cupones",
+    "Enable coupons": "Habilitar cupones",
+    "Allow use of coupons upon checkout.": "Permitir el uso de cupones al finalizar la compra.",
+    "List of coupons": "Lista de cupones",
+    "Provide one coupon and its discount rate per line. Example: BESTDEALS 15.": "Proporcione un cupón y su tasa de descuento por línea. Ejemplo: MEJORES OFERTAS 15.",
+    "Products": "productos",
+    "Product discounts": "Descuentos en productos",
+    "Enable or disable all discounts defined under individual products page.": "Habilite o deshabilite todos los descuentos definidos en la página de productos individuales.",
+    "List of hours": "Lista de horas",
+    "Provide one happy hour, its discount per line. Example: Monday 15:00-17:30 10.": "Proporcione una hora feliz, su descuento por línea. Ejemplo: Lunes 15:00-17:30 10.",
+    "Printing": "Impresión",
+    "Action": "Acción",
+    "Default printing dialogue": "Diálogo de impresión predeterminado",
+    "Kenzap print app": "Aplicación de impresión Kenzap",
+    "Choose action when printing icon is clicked.": "Elija la acción cuando se haga clic en el icono de impresión.",
+    "Print": "Impresión",
+    "Invoice": "Factura",
+    "Receipt": "Recibo",
+    "Default printing media.": "Medios de impresión predeterminados.",
     "Receipts": "Ingresos",
-    "Invoice receipt design for printers.": "Diseño de recibo de factura para imprentas.",
+    "Default receipt template for printers.": "Plantilla de recibo predeterminada para impresoras.",
+    "Auto mode": "modo coche",
+    "Auto print": "Impresión automática",
+    "Auto print new orders from this device. Other devices will not be affected.": "Imprimir automáticamente nuevos pedidos desde este dispositivo. Otros dispositivos no se verán afectados.",
+    "QR code": "Código QR",
+    "QR code printing": "Impresión de código QR",
+    "Allow \"Scan me to order\" QR-code printing from orders dashboard.": "Permitir la impresión de código QR \"Escanearme para pedir\" desde el panel de pedidos.",
+    "QR printing": "impresión QR",
+    "Default \"Scan me to order\" template for printers.": "Plantilla predeterminada \"Escanearme para pedir\" para impresoras.",
     "Your tax information": "Tu información fiscal",
     "Invoice info (this information will be not revealed public)": "Información de la factura (esta información no se revelará públicamente)",
     "Tax ID": "Identificación del impuesto",
@@ -115,8 +195,8 @@
     "Nov": "Nov",
     "Dec": "Dic",
     "moments ago": "Momentos atrás",
-    " minutes ago": " hace minutos",
-    " hours ago": " horas atras",
+    "minutes ago": "hace minutos",
+    "hours ago": "horas atras",
     "required": "requerido",
     "Showing %1$ to %2$ of %3$ entries": "Mostrando %1$ a %2$ de %3$ entradas",
     "Create": "Crear",
@@ -124,14 +204,19 @@
     "Close": "Cerrar",
     "Product": "Producto",
     "Qty": "Cantidad",
+    "Total": "Total",
     "Search..": "Búsqueda..",
     "Add note": "Añadir la nota",
     "Add variation": "Agregar variación",
     "Adjust price": "Precio ajustado",
     "Remove": "Remover",
     "Note": "Nota",
+    "Discount by value": "Descuento por valor",
+    "Discount by %": "Descuento por %",
+    "Grand Total": "Gran total",
     "Incorrect product data": "Datos de producto incorrectos",
     "ID": "IDENTIFICACIÓN",
+    "Table": "Mesa",
     "Name": "Nombre",
     "Surname": "Apellido",
     "Bios": "biografías",
@@ -147,11 +232,11 @@
     "Bank": "Banco",
     "Bank city": "Ciudad bancaria",
     "Bank country": "país del banco",
-    "Amount Payable": "Cantidad pagable",
     "Link 3": "Enlace 3",
     "Grade": "Grado",
     "Kenzap IDA": "AIF de Kenzap",
-    "Printing j": "Impresión j",
+    "Table %1$": "Tabla %1$",
+    "Discount": "Descuento",
     "new category": "nueva categoría",
     "Dashboard": "Panel",
     "E-commerce": "comercio electrónico",
@@ -159,7 +244,6 @@
     "day": "día",
     "days": "dias",
     "Total tax": "Total impuestos",
-    "Total with tax": "total con impuestos",
     "No data to display": "no hay información para mostrar",
     "Totals": "Totales",
     "Created by %1$Kenzap%2$. ❤️ Licensed %3$GPL3%4$.": "Creado por %1$Kenzap%2$. ❤️ Con licencia %3$GPL3%4$.",
@@ -190,10 +274,37 @@
     "Add Variation": "Agregar variación",
     "Brown rice": "arroz integral",
     "You can change default currency under Dashboard &gt; Settings.": "Puede cambiar la moneda predeterminada en Panel de control &gt; Ajustes.",
+    "Add discount": "Agregar descuento",
+    "By percent": "por ciento",
+    "By value": "Por valor",
+    "Percent %": "porcentaje %",
+    "Value": "Valor",
+    "12.00": "12.00",
+    "Define how big is the discount (numeric value only).": "Defina qué tan grande es el descuento (solo valor numérico).",
+    "Availability": "Disponibilidad",
+    "Always": "Siempre",
+    "Hourly": "Cada hora",
+    "Weekly": "Semanalmente",
+    "Monthly": "Mensual",
+    "Restrict discount availability.": "Restringir la disponibilidad de descuentos.",
+    "Days of week": "Días de la semana",
+    "Monday": "Lunes",
+    "Tuesday": "martes",
+    "Wednesday": "miércoles",
+    "Thursday": "jueves",
+    "Friday": "Viernes",
+    "Saturday": "sábado",
+    "Sunday": "Domingo",
+    "Days of the week when discount is available.": "Días de la semana cuando el descuento está disponible.",
+    "12:00": "12:00",
+    "To": "A",
+    "17:00": "17:00",
+    "Time range when discount is available.": "Rango de tiempo cuando el descuento está disponible.",
+    "Example: •happy hour promo.": "Ejemplo: • promoción de hora feliz.",
+    "+ add option": "+ añadir opción",
+    "to differentiate price offering.": "para diferenciar la oferta de precios.",
     "Please provide image in JPEG format": "Proporcione la imagen en formato JPEG",
     "Please provide image less than 5 MB in size!": "Proporcione una imagen de menos de 5 MB de tamaño.",
-    "+ add option": "+ añadir opción",
-    ", differentiate price and product options.": ", diferenciar precio y opciones de producto.",
     "Product updated": "Producto actualizado",
     "Search products": "Buscar Productos",
     "Completely remove this product?": "¿Eliminar completamente este producto?",
@@ -202,6 +313,21 @@
     "Last change": "Ultimo cambio",
     "No products to display.": "No hay productos para mostrar.",
     "Remove this product": "Quitar este producto",
-    "Choose currency": "Elegir Moneda"
+    "Choose currency": "Elegir Moneda",
+    "Price normal": "precio normal",
+    "Product stock unit identification number": "Número de identificación de la unidad de stock del producto",
+    "Define new order ID number.": "Defina el nuevo número de identificación del pedido.",
+    "Admin emails": "Correos electrónicos de administración",
+    "Currency settings": "Configuración de moneda",
+    "Currency position": "Posición de moneda",
+    "Rate": "Velocidad",
+    "Invoice and receipts": "Factura y recibos",
+    "Invoice receipt design for printers.": "Diseño de recibo de factura para imprentas.",
+    " minutes ago": " hace minutos",
+    " hours ago": " horas atras",
+    "Amount Payable": "Cantidad pagable",
+    "Printing j": "Impresión j",
+    "Total with tax": "total con impuestos",
+    ", differentiate price and product options.": ", diferenciar precio y opciones de producto."
   }
 }
