--- a/src/locales/id.json
+++ b/src/locales/id.json
@@ -19,21 +19,43 @@
     "Failed": "Gagal",
     "Refunded": "Dikembalikan",
     "Search order": "Cari pesanan",
+    "QR number": "nomor QR",
     "From": "Dari",
     "Status": "Status",
-    "Total": "Total",
+    "Subtotal": "Subtotal",
     "Time": "Waktu",
+    "Sketch": "Sketsa",
+    "Drawing": "Menggambar",
+    "Preview": "Pratinjau",
+    "Editing": "Mengedit",
+    "Input fields": "Bidang masukan",
+    "Calculate price": "Hitung harga",
+    "Flat price": "Harga tetap",
+    "By sketch": "Dengan sketsa",
+    "By formula": "Dengan rumus",
+    "Formula": "Rumus",
+    "(A + B) * L": "(A + B) * L",
+    "Test field": "bidang tes",
+    "Test field..": "bidang percobaan..",
     "Description": "Keterangan",
     "Title": "Judul",
     "Sushi set..": "paket sushinya..",
     "Short Description": "Deskripsi Singkat",
     "Images": "Gambar-gambar",
     "Price": "Harga",
-    "Price normal": "Harga normal",
+    "Default": "Bawaan",
+    "discount": "diskon",
     "Discounted": "diskon",
+    "Discount list": "daftar diskon",
     "+ add variation": "+ tambahkan variasi",
     "Inventory": "Inventaris",
-    "Product stock unit identification number": "Nomor identifikasi unit stok produk",
+    "Product stock unit identification number or SKU.": "Nomor identifikasi unit stok produk atau SKU.",
+    "Stock management": "Manajemen stok",
+    "Enable stock management.": "Aktifkan manajemen stok.",
+    "Stock quantity": "jumlah stok",
+    "Total number of products left.": "Jumlah produk yang tersisa.",
+    "Low stock": "Stoknya sedikit",
+    "Low stock threshold.": "Ambang batas stok rendah.",
     "General": "Umum",
     "Published": "Diterbitkan",
     "Draft": "Draf",
@@ -45,37 +67,95 @@
     "Payout": "Pembayaran",
     "Legal": "Hukum",
     "Order ID": "Id pemesanan",
-    "Define new order ID number.": "Tentukan nomor ID pesanan baru.",
-    "Notifications": "Notifikasi",
+    "Define next new order ID number.": "Tentukan nomor ID pesanan baru berikutnya.",
+    "Auto complete": "Selesai otomatis",
     "None": "Tidak ada",
+    "1 minute": "1 menit",
+    "5 minutes": "5 menit",
+    "20 minutes": "20 menit",
+    "1 hour": "1 jam",
+    "12 hours": "12 jam",
+    "24 hours": "24 jam",
+    "Auto complete orders after certain amount of time.": "Selesaikan pesanan secara otomatis setelah jangka waktu tertentu.",
+    "Tables": "Tabel",
+    "Table mode": "Modus tabel",
+    "Enable table mode in orders dashboard.": "Aktifkan mode tabel di dasbor pesanan.",
+    "List of tables": "Daftar tabel",
+    "Provide one table per line. Example: 5.": "Sediakan satu meja per baris. Contoh: 5.",
+    "Notifications": "Notifikasi",
     "Client": "Klien",
     "Administrator": "Administrator",
     "Client and administrator": "Klien dan administrator",
-    "Admin emails": "email admin",
+    "Emails": "Email",
     "Cancelled order": "Pesanan yang dibatalkan",
     "Processing order": "Memproses pesanan",
     "Refunded order": "Pesanan yang dikembalikan dananya",
-    "Currency settings": "Pengaturan mata uang",
+    "Completed order": "pesanan selesai",
+    "Choose how to trigger notifications.": "Pilih cara memicu notifikasi.",
+    "Example: alex@kenzap.com, orders@kenzap.com": "Contoh: alex@kenzap.com, orders@kenzap.com",
+    "Via dashboard": "Melalui dasbor",
+    "Via email": "Melalui email",
+    "Via dashboard and email": "Melalui dasbor dan email",
+    "Product low stock notification settings.": "Pengaturan pemberitahuan stok produk rendah.",
     "Currency": "Mata uang",
     "Currency symbol": "Simbol mata uang",
-    "Currency position": "Posisi mata uang",
+    "Position": "Posisi",
     "Left": "Kiri",
     "Right": "Benar",
     "Left with space": "Ditinggalkan dengan ruang",
     "Right with space": "Benar dengan ruang",
+    "Currency position symbol.": "Simbol posisi mata uang.",
     "Tax": "Pajak",
     "Calculate": "Menghitung",
     "Enable tax calculations when processing orders.": "Aktifkan penghitungan pajak saat memproses pesanan.",
     "Geolocation": "Geolokasi",
     "Auto tax rate": "Tarif pajak otomatis",
     "Automatically detect tax rate whenever applicable.": "Secara otomatis mendeteksi tarif pajak kapan pun berlaku.",
-    "Rate": "Kecepatan",
+    "Percent": "Persen",
     "Default tax rate. Example, 9 or 21. Use numeric value.": "Tarif pajak default. Contoh, 9 atau 21. Gunakan nilai numerik.",
     "Display": "Menampilkan",
     "Tax title. Example, VAT or GST.": "Judul pajak. Contoh, PPN atau GST.",
-    "Invoice and receipts": "Faktur dan tanda terima",
+    "Fees": "Biaya",
+    "Service": "Melayani",
+    "Calculate service fee when processing orders.": "Hitung biaya layanan saat memproses pesanan.",
+    "Default fee rate. Example, 5 or 7. Use numeric value.": "Tarif biaya default. Contoh, 5 atau 7. Gunakan nilai numerik.",
+    "Fee title. Example, Service fee.": "Judul biaya. Contoh, biaya layanan.",
+    "Payment": "Pembayaran",
+    "Methods": "Metode",
+    "Custom methods": "Metode khusus",
+    "Allow changing of payment method in the dashboard.": "Izinkan perubahan metode pembayaran di dasbor.",
+    "List of Methods": "Daftar Metode",
+    "Provide list of available payment methods. Example: PayPal, PayNow.": "Berikan daftar metode pembayaran yang tersedia. Contoh: PayPal, PayNow.",
+    "Discounts": "diskon",
+    "Coupons": "kupon",
+    "Enable coupons": "Aktifkan kupon",
+    "Allow use of coupons upon checkout.": "Izinkan penggunaan kupon saat checkout.",
+    "List of coupons": "Daftar kupon",
+    "Provide one coupon and its discount rate per line. Example: BESTDEALS 15.": "Berikan satu kupon dan tingkat diskontonya per baris. Contoh: BESTDEALS 15.",
+    "Products": "Produk",
+    "Product discounts": "diskon produk",
+    "Enable or disable all discounts defined under individual products page.": "Aktifkan atau nonaktifkan semua diskon yang ditentukan di bawah halaman produk individual.",
+    "List of hours": "Daftar jam",
+    "Provide one happy hour, its discount per line. Example: Monday 15:00-17:30 10.": "Berikan satu happy hour, diskonnya per baris. Contoh: Senin 15:00-17:30 10.",
+    "Printing": "Pencetakan",
+    "Action": "Tindakan",
+    "Default printing dialogue": "Dialog pencetakan default",
+    "Kenzap print app": "Aplikasi cetak Kenzap",
+    "Choose action when printing icon is clicked.": "Pilih tindakan saat ikon pencetakan diklik.",
+    "Print": "Mencetak",
+    "Invoice": "Faktur",
+    "Receipt": "Resi",
+    "Default printing media.": "Media cetak bawaan.",
     "Receipts": "tanda terima",
-    "Invoice receipt design for printers.": "Desain tanda terima faktur untuk printer.",
+    "Default receipt template for printers.": "Templat tanda terima default untuk printer.",
+    "Auto mode": "mode mobil",
+    "Auto print": "Cetak otomatis",
+    "Auto print new orders from this device. Other devices will not be affected.": "Cetak otomatis pesanan baru dari perangkat ini. Perangkat lain tidak akan terpengaruh.",
+    "QR code": "Kode QR",
+    "QR code printing": "Pencetakan kode QR",
+    "Allow \"Scan me to order\" QR-code printing from orders dashboard.": "Izinkan pencetakan kode QR \"Pindai saya untuk memesan\" dari dasbor pesanan.",
+    "QR printing": "pencetakan QR",
+    "Default \"Scan me to order\" template for printers.": "Template default \"Pindai saya untuk memesan\" untuk printer.",
     "Your tax information": "Informasi pajak Anda",
     "Invoice info (this information will be not revealed public)": "Info faktur (informasi ini tidak akan diungkapkan kepada publik)",
     "Tax ID": "Id pajak",
@@ -115,8 +195,8 @@
     "Nov": "November",
     "Dec": "Desember",
     "moments ago": "beberapa waktu lalu",
-    " minutes ago": " beberapa menit yang lalu",
-    " hours ago": " beberapa jam yang lalu",
+    "minutes ago": "beberapa menit yang lalu",
+    "hours ago": "beberapa jam yang lalu",
     "required": "diperlukan",
     "Showing %1$ to %2$ of %3$ entries": "Menampilkan %1$ hingga %2$ dari %3$ entri",
     "Create": "Membuat",
@@ -124,14 +204,19 @@
     "Close": "Menutup",
     "Product": "Produk",
     "Qty": "jumlah",
+    "Total": "Total",
     "Search..": "Mencari..",
     "Add note": "Menambahkan catatan",
     "Add variation": "Tambahkan variasi",
     "Adjust price": "Sesuaikan harga",
     "Remove": "Menghapus",
     "Note": "Catatan",
+    "Discount by value": "Diskon berdasarkan nilai",
+    "Discount by %": "Diskon sebesar %",
+    "Grand Total": "Hasil akhir",
     "Incorrect product data": "Data produk salah",
     "ID": "PENGENAL",
+    "Table": "Meja",
     "Name": "Nama",
     "Surname": "Nama belakang",
     "Bios": "bios",
@@ -147,11 +232,11 @@
     "Bank": "Bank",
     "Bank city": "kota bank",
     "Bank country": "negara bank",
-    "Amount Payable": "Jumlah yang harus dibayar",
     "Link 3": "tautan 3",
     "Grade": "Nilai",
     "Kenzap IDA": "Kenzap IDA",
-    "Printing j": "Mencetak j",
+    "Table %1$": "Tabel %1$",
+    "Discount": "Diskon",
     "new category": "kategori baru",
     "Dashboard": "Dasbor",
     "E-commerce": "Perdagangan elektronik",
@@ -159,7 +244,6 @@
     "day": "hari",
     "days": "hari",
     "Total tax": "Total pajak",
-    "Total with tax": "Total dengan pajak",
     "No data to display": "tidak ada data untuk ditampilkan",
     "Totals": "Total",
     "Created by %1$Kenzap%2$. ❤️ Licensed %3$GPL3%4$.": "Dibuat oleh %1$Kenzap%2$. ❤️ Berlisensi %3$GPL3%4$.",
@@ -190,10 +274,37 @@
     "Add Variation": "Tambahkan Variasi",
     "Brown rice": "beras merah",
     "You can change default currency under Dashboard &gt; Settings.": "Anda dapat mengubah mata uang default di Dasbor &gt; Pengaturan.",
+    "Add discount": "Tambahkan diskon",
+    "By percent": "Dengan persen",
+    "By value": "Berdasarkan nilai",
+    "Percent %": "persen%",
+    "Value": "Nilai",
+    "12.00": "12.00",
+    "Define how big is the discount (numeric value only).": "Tentukan seberapa besar diskonnya (nilai numerik saja).",
+    "Availability": "Ketersediaan",
+    "Always": "Selalu",
+    "Hourly": "Per jam",
+    "Weekly": "Mingguan",
+    "Monthly": "Bulanan",
+    "Restrict discount availability.": "Batasi ketersediaan diskon.",
+    "Days of week": "Hari-hari dalam seminggu",
+    "Monday": "Senin",
+    "Tuesday": "Selasa",
+    "Wednesday": "Rabu",
+    "Thursday": "Kamis",
+    "Friday": "Jumat",
+    "Saturday": "Sabtu",
+    "Sunday": "Minggu",
+    "Days of the week when discount is available.": "Hari dalam seminggu saat diskon tersedia.",
+    "12:00": "12:00",
+    "To": "Ke",
+    "17:00": "17:00",
+    "Time range when discount is available.": "Rentang waktu saat diskon tersedia.",
+    "Example: •happy hour promo.": "Contoh: •promo happy hour.",
+    "+ add option": "+ tambahkan opsi",
+    "to differentiate price offering.": "untuk membedakan penawaran harga.",
     "Please provide image in JPEG format": "Harap berikan gambar dalam format JPEG",
     "Please provide image less than 5 MB in size!": "Harap berikan gambar berukuran kurang dari 5 MB!",
-    "+ add option": "+ tambahkan opsi",
-    ", differentiate price and product options.": ", membedakan harga dan pilihan produk.",
     "Product updated": "Produk diperbarui",
     "Search products": "Cari produk",
     "Completely remove this product?": "Hapus produk ini sepenuhnya?",
@@ -202,6 +313,21 @@
     "Last change": "Perubahan terakhir",
     "No products to display.": "Tidak ada produk untuk ditampilkan.",
     "Remove this product": "Hapus produk ini",
-    "Choose currency": "Pilih mata uang"
+    "Choose currency": "Pilih mata uang",
+    "Price normal": "Harga normal",
+    "Product stock unit identification number": "Nomor identifikasi unit stok produk",
+    "Define new order ID number.": "Tentukan nomor ID pesanan baru.",
+    "Admin emails": "email admin",
+    "Currency settings": "Pengaturan mata uang",
+    "Currency position": "Posisi mata uang",
+    "Rate": "Kecepatan",
+    "Invoice and receipts": "Faktur dan tanda terima",
+    "Invoice receipt design for printers.": "Desain tanda terima faktur untuk printer.",
+    " minutes ago": " beberapa menit yang lalu",
+    " hours ago": " beberapa jam yang lalu",
+    "Amount Payable": "Jumlah yang harus dibayar",
+    "Printing j": "Mencetak j",
+    "Total with tax": "Total dengan pajak",
+    ", differentiate price and product options.": ", membedakan harga dan pilihan produk."
   }
 }
